--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="runtime.js"></script><script src="polyfills-es5.js" nomodule></script><script src="polyfills.js"></script><script src="styles.js"></script><script src="vendor.js"></script><script src="main.js"></script></body>
+<script src="Reut-CohenShaham-17-1-20-.github.io/runtime.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/polyfills-es5.js" nomodule></script><script src="Reut-CohenShaham-17-1-20-.github.io/polyfills.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/styles.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/vendor.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/main.js"></script></body>
 </html>
