--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 </head>
 <body>
   <app-root></app-root>
-<script src="Reut-CohenShaham-17-1-20-.github.io/runtime.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/polyfills-es5.js" nomodule></script><script src="Reut-CohenShaham-17-1-20-.github.io/polyfills.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/styles.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/vendor.js"></script><script src="Reut-CohenShaham-17-1-20-.github.io/main.js"></script></body>
+<script src="https://reut111.github.io/Reut-CohenShaham-17-1-20-/runtime.js"></script><script src="https://reut111.github.io/Reut-CohenShaham-17-1-20-/polyfills-es5.js" nomodule></script><script src="https://reut111.github.io/Reut-CohenShaham-17-1-20-/polyfills.js"></script><script src="https://reut111.github.io/Reut-CohenShaham-17-1-20-/styles.js"></script><script src=https://reut111.github.io/Reut-CohenShaham-17-1-20-/vendor.js"></script><script src="https://reut111.github.io/Reut-CohenShaham-17-1-20-/main.js"></script></body>
 </html>
